--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 bot.name=SmthTest11Bot
 bot.token=5975372842:AAFyq4Y10-kwkayOUXnQBil7Ua_TaoRHGGU
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=postgres
+spring.datasource.password=postgre
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_msg
